Bug 441709 - Bad texture filter
Summary: Bad texture filter
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: effects-overview (other bugs)
Version First Reported In: git master
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-08-29 16:32 UTC by Zamundaaa
Modified: 2021-09-10 13:23 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.23
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Zamundaaa 2021-08-29 16:32:13 UTC
It looks as if GL_NEAREST was used; text and icons are pixelated and often cut off.
Comment 1 Zamundaaa 2021-08-29 16:34:03 UTC
Example image: https://i.imgur.com/bEx0otO.jpg
Comment 2 Bug Janitor Service 2021-09-10 06:17:03 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/1402
Comment 3 Vlad Zahorodnii 2021-09-10 09:13:46 UTC
Git commit 46e2d51044b253e1a61dc8013f107bdd3c08cc28 by Vlad Zahorodnii.
Committed on 10/09/2021 at 06:16.
Pushed by vladz into branch 'master'.

scripting: Make thumbnaills use linear filter

QSGImageNode ignores QSGTexture's filter, one has to specify it using
QSGImageNode::setFiltering().

In hindsight, we need to figure out how to integrate the lanczos filter
with window thumbnails and use it instead.

M  +1    -0    src/scripting/thumbnailitem.cpp

https://invent.kde.org/plasma/kwin/commit/46e2d51044b253e1a61dc8013f107bdd3c08cc28